@@ -1,0 +1,10 @@
+- ExoIconBar: add style properties for active_item_text_color and 
+  cursor_item_text_color to get around problems with gtk themes.
+
+
+URIs:
+-----
+
+	desktop://		Home dir and below
+	file://			System files
+	media://		Removable Media
