@@ -1,3 +1,11 @@
+2004-09-30	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-bar.c(exo_icon_bar_paint_item): Always draw the text
+	  with ACTIVE or SELECTED state to work-around issues with gtk
+	  themes that do not yet know about ExoIconBar. We need a real
+	  solution here.
+	* TODO: Added note about the ExoIconBar theme problem.
+
 2004-09-25	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac: Version 0.1.1.
